credit card adjust

--- a/ShopList.html
+++ b/ShopList.html
@@ -42,31 +42,33 @@
       <div class="row justify-content-between">
         <div class="col-lg-7">
           <div class="d-flex justify-content-between itemListMing borderMing">
-            <div class="productImgMing">
-              <img src="imgs/air-force.jfif" alt="" />
-            </div>
-            <div class="productDetailMing">
-              <p class="productNameMing d-lg-block d-none fz20">品名</p>
-              <p class="productNameMing">Nike Air Max 2021</p>
-              <p class="productCategoryMing">男鞋</p>
-              <p class="productColorMing d-lg-block d-none">黑色</p>
-              <label for="">尺寸</label>
-              <select name="product-size" id="">
-                <option value="23">23</option>
-                <option value="23.5">23.5</option>
-                <option value="24">24</option>
-                <option value="24.5">24.5</option>
-                <option value="25">25</option>
-              </select>
-              <br />
-              <label for="">數量</label>
-              <select name="productQuantityMing" id="" class="mt-3">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-              </select>
+            <div class="d-flex">
+              <div class="productImgMing">
+                <img src="imgs/air-force.jfif" alt="" />
+              </div>
+              <div class="productDetailMing ml-4">
+                <p class="productNameMing d-lg-block d-none fz20">品名</p>
+                <p class="productNameMing">Nike Air Max 2021</p>
+                <p class="productCategoryMing">男鞋</p>
+                <p class="productColorMing d-lg-block d-none">黑色</p>
+                <label for="">尺寸</label>
+                <select name="product-size" id="">
+                  <option value="23">23</option>
+                  <option value="23.5">23.5</option>
+                  <option value="24">24</option>
+                  <option value="24.5">24.5</option>
+                  <option value="25">25</option>
+                </select>
+                <br />
+                <label for="">數量</label>
+                <select name="productQuantityMing" id="" class="mt-3">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                </select>
+              </div>
             </div>
 
             <!-- 待修正 unitPriceMing手機板要消失 -->
@@ -100,7 +102,7 @@
                   data-toggle="tooltip"
                   data-placement="right"
                   class="far fa-question-circle d-lg-none d-inline-block q1"
-                  title="消費金額達NT$ 6000元享9折優惠"
+                  title="消費金額達NT$ 4500享免運費"
                 ></i>
                 $
                 <span class="shippingFeeMing">0</span>
@@ -110,7 +112,7 @@
                   data-toggle="tooltip"
                   data-placement="right"
                   class="far fa-question-circle d-lg-none d-inline-block"
-                  title="適用於NT$ 4500以上之訂單"
+                  title="消費金額達NT$ 6000享9折優惠"
                 ></i>
                 -$
                 <span class="discountMing">1080</span>
