--- a/FillForm.html
+++ b/FillForm.html
@@ -47,7 +47,7 @@
         展開明細 <i class="fas fa-plus"></i>
       </div>
     </div>
-    <div class="container rans1s hideList" id="showList">
+    <div class="container hideList" id="showList">
       <div class="d-flex justify-content-between fz16 borderMing">
         <div class="d-flex">
           <div class="productImgMing">
